@@ -7,6 +7,7 @@
 #include "Map/Ground.h"
 #include "Map/ReadMap.h"
 #include "Sim/Misc/GroundBlockingObjectMap.h"
+#include "Sim/Misc/ModInfo.h"
 #include "Sim/Misc/QuadField.h"
 #include "Sim/Misc/TeamHandler.h"
 #include "Sim/MoveTypes/MoveType.h"
@@ -464,7 +465,9 @@ void CFactory::AssignBuildeeOrders(CUnit* unit) {
 	}
 
 	if (unitCmdQue.empty()) {
-		unitCAI->GiveCommand(c);
+		if (modInfo.insertBuiltUnitMoveCommand) {
+			unitCAI->GiveCommand(c);
+		}
 
 		// copy factory orders for new unit
 		for (auto ci = factoryCmdQue.begin(); ci != factoryCmdQue.end(); ++ci) {
@@ -486,7 +489,7 @@ void CFactory::AssignBuildeeOrders(CUnit* unit) {
 
 			unitCAI->GiveCommand(c);
 		}
-	} else {
+	} else if (modInfo.insertBuiltUnitMoveCommand) {
 		unitCmdQue.push_front(c);
 	}
 }
